k8s/applications/business/listmonk/service-route.yaml
apiVersion: v1
kind: Service
metadata:
  name: listmonk
  namespace: listmonk
spec:
  selector:
    app.kubernetes.io/name: listmonk
  ports:
    - name: http
      port: 80
      targetPort: http
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: listmonk
  namespace: listmonk
spec:
  parentRefs:
    - name: external
      namespace: gateway
    - name: internal
      namespace: gateway
  hostnames:
    - lists.smadja.dev
  rules:
    - backendRefs:
        - name: listmonk
          port: 80
